[STUDIO-2197]avoid NPE and use genericity to avoid a lot of ClassCast